<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_hello"
        style="@style/style_size_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.04"
        android:text="@string/home_31_welcome"
        android:textColor="@color/white"
        app:fontFamily="@font/svn_gilroy_regular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name"
        style="@style/style_title_smbold_size_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_hello"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.016"
        android:textColor="@color/white"
        android:textFontWeight="700"
        tools:text="@string/home_31_welcome" />

    <ImageView
        android:id="@+id/tv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_avatar" />

    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_name"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_transparent_r20"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_man" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_outstanding"
            style="@style/style_text_regular_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/home_31_Outstanding"
            android:textAllCaps="true"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_solving_questions"
            style="@style/style_size_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label_outstanding"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/home_31_desc"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bt_search_id"
            style="@style/style_text_regular_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_solving_questions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_white_r20"
            android:drawableLeft="@drawable/ic_bt_search"
            android:drawablePadding="10dp"
            android:fontFamily="@font/svn_gilroy_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/home_31_findID"
            android:textColor="@color/color_purple" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bt_search_id"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/bt_search_id"
            android:src="@drawable/ic_women" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_search"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_white_top_r32"
        android:paddingHorizontal="24dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_system_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_system"
                    style="@style/style_text_regular_size_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_ripple_text_color_primary"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/home_31_from_system" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user"
                    style="@style/style_text_regular_size_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_ripple_text_color_primary"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/home_31_from_user" />
            </androidx.appcompat.widget.LinearLayoutCompat>

<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->

<!--                <View-->
<!--                    android:id="@+id/v_underline_system"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:background="@color/color_gray3"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_height="1dp"/>-->

<!--                <View-->
<!--                    android:id="@+id/v_underline_user"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@color/color_gray3"-->
<!--                    android:layout_height="1dp"/>-->

<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_faculty_list"
            style="@style/style_text_medium_size_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_system_user"
            android:paddingVertical="10dp"
            android:text="@string/home_31_faculty_list"
            android:textColor="#0C092A" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_see_all"
            style="@style/style_text_medium_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_system_user"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_ripple_text_color_primary"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/home_31_view_all"
            android:textColor="@color/color_purple" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_department_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_faculty_list"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="60dp"
            tools:itemCount="5"
            tools:listitem="@layout/item_faculty" />

    </RelativeLayout>
</RelativeLayout>