<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:drawableStart="@drawable/ic_back_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/tk_33_title"
            style="@style/style_title_regular_size_24"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:visibility="invisible"
            android:drawableStart="@drawable/ic_back_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_view"
        android:layout_marginTop="16dp"
        android:paddingVertical="@dimen/_12dp"
        android:drawableStart="@drawable/ic_search"
        android:paddingLeft="@dimen/_12dp"
        android:drawablePadding="@dimen/_12dp"
        android:layout_below="@id/layout_toolbar"
        android:hint="@string/tk_32_search_hint"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_search_r20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/search_view"
        android:background="@drawable/bg_screen_search"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_medium_size_20"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/tk_33_last_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_medium_size_14"
                android:textColor="@color/color_primary"
                android:layout_marginTop="3dp"
                android:text="@string/tk_33_remove_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_item_suggest"
            tools:itemCount="5"
            tools:listitem="@layout/item_subject"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>